<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/capture_prompt_nanos_osc" />

        <Button
            android:id="@+id/btn_normal_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/capture_normal_capture"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_normal_pano_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/capture_normal_pano_capture"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_hdr_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_hdr_capture"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_hdr_pano_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_hdr_pano_capture"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_interval_shooting_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_interval_shooting_start"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_interval_shooting_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/capture_interval_shooting_stop"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_normal_record_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_normal_record_start"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_normal_record_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/capture_normal_record_stop"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_hdr_record_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_hdr_record_start"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_hdr_record_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/capture_hdr_record_stop"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_timelapse_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_timelapse_start"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_timelapse_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/capture_timelapse_stop"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_capture_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            tools:text="@string/capture_capture_working" />

        <TextView
            android:id="@+id/tv_capture_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:visibility="gone"
            tools:text="@string/capture_capture_time"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_capture_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:visibility="gone"
            tools:text="@string/capture_capture_count"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_play_camera_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_play_camera_file"
            android:textAllCaps="false"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_play_local_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_play_local_file"
            android:textAllCaps="false"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>